--- a/package.json
+++ b/package.json
@@ -1,17 +1,54 @@
 {
-  "name": "lolchess_builder",
+  "name": "tft-utils",
   "version": "0.1.0",
-  "private": true,
+  "description": "tft team-builder",
+  "keywords": [
+    "tft",
+    "league of legends",
+    "teamfight tactics",
+    "team builder",
+    "team fight tactics",
+    "riot games"
+  ],
+  "bugs": {
+    "email": "lamborlikes@gmail.com"
+  },
+  "license": "MIT",
+  "author":  {
+    "name": "lamborlikes",
+    "email": "lamborlikes@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gaki2/tft-utils"
+  },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "styled-components": ">=5"
   },
+  "main": "lib/src/index.cjs",
+  "module": "lib/src/index.js",
+  "types": "lib/src/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./lib/src/index.cjs",
+      "import": "./lib/src/index.js",
+      "types": "./lib/src/index.d.ts",
+      "default": "./lib/src/index.cjs"
+    }
+  },
+  "sideEffects": false,
+  "files": [
+    "lib"
+  ],
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@rollup/plugin-alias": "^5.0.0",
+    "@rollup/plugin-node-resolve": "^15.2.1",
     "@storybook/addon-actions": "^7.1.1",
     "@storybook/addon-backgrounds": "^7.1.1",
     "@storybook/addon-essentials": "^7.1.1",
@@ -47,19 +84,28 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "rimraf": "^5.0.1",
+    "rollup": "^3.23.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-import-css": "^3.3.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "storybook": "^7.1.1",
     "storybook-addon-designs": "^6.3.1",
-    "styled-components": "^5.3.8",
+    "styled-components": "^5.3.11",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^4.9.5",
     "typescript-plugin-css-modules": "^5.0.1",
+    "vitest": "^0.34.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "create": "ts-node -r tsconfig-paths/register src/script/index.ts",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-rollup": "rollup -c",
+    "build": "rimraf lib && npm run build-rollup"
   },
   "eslintConfig": {
     "extends": [
