--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "email": "lamborlikes@gmail.com"
   },
   "license": "MIT",
-  "author":  {
+  "author": {
     "name": "lamborlikes",
     "email": "lamborlikes@gmail.com"
   },
@@ -54,6 +54,7 @@
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@changesets/cli": "^2.26.2",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@storybook/addon-actions": "^7.1.1",
