config: changeset config 수정

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   },
   "license": "MIT",
   "author": {
-    "name": "lamborlikes",
-    "email": "lamborlikes@gmail.com"
+    "name": "lamborlikes <lamborlikes@gmail.com>"
   },
   "repository": {
     "type": "git",
