--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "email": "lamborlikes@gmail.com"
   },
   "license": "MIT",
-  "author":  {
-    "name": "lamborlikes",
-    "email": "lamborlikes@gmail.com"
+  "author": {
+    "name": "lamborlikes <lamborlikes@gmail.com>"
   },
   "repository": {
     "type": "git",
@@ -54,6 +53,7 @@
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@changesets/cli": "^2.26.2",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@storybook/addon-actions": "^7.1.1",
