--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@changesets/cli": "^2.26.2",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-terser": "^0.4.3",
     "@storybook/addon-actions": "^7.1.1",
     "@storybook/addon-backgrounds": "^7.1.1",
     "@storybook/addon-essentials": "^7.1.1",
