--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "styled-components": "^5.3.11",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^4.9.5",
+    "typescript": "5.2.2",
     "typescript-plugin-css-modules": "^5.0.1",
     "vitest": "^0.34.3",
     "web-vitals": "^2.1.4"
