--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.12",
   "description": "tft team-builder",
   "scripts": {
+    "start": "npm run storybook",
     "parse": "ts-node src/script/execute.ts",
     "storybook": "storybook dev -p 6006",
     "build-rollup": "rollup -c",
