--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "storybook": "storybook dev -p 6006",
     "build-rollup": "rollup -c",
     "build": "rimraf lib && npm run parse && npm run build-rollup",
-    "release": "npm run build && changeset publish"
+    "release": "npm run build && changeset publish",
+    "test": "vitest run"
   },
   "keywords": [
     "tft",
@@ -89,6 +90,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-storybook": "^0.6.13",
+    "eslint-plugin-vitest": "^0.3.9",
     "file-loader": "^6.2.0",
     "plop": "^3.1.2",
     "prettier": "^2.8.4",
