--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tft team-builder",
   "scripts": {
     "start": "npm run storybook",
-    "parse": "ts-node src/script/index.ts",
+    "parse": "ts-node src/script/parser/index.ts",
     "storybook": "storybook dev -p 6006",
     "build-rollup": "rollup -c",
     "build": "rimraf lib && npm run parse && npm run build-rollup",
@@ -85,6 +85,7 @@
     "@typescript-eslint/parser": "5.59.7",
     "axios": "^1.4.0",
     "babel-loader": "^8.3.0",
+    "chalk": "^5.3.0",
     "eslint": "^8.35.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
     "eslint-plugin-promise": "^6.1.1",
