--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.40",
     "@types/react": "^18.2.19",
+    "@vitejs/plugin-react": "^4.1.1",
+    "jsdom": "^22.1.0",
     "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
