feat: lodash 설치

--- a/package.json
+++ b/package.json
@@ -79,12 +79,11 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.40",
     "@types/react": "^18.2.19",
-    "@vitejs/plugin-react": "^4.1.1",
-    "jsdom": "^22.1.0",
     "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "5.59.7",
+    "@vitejs/plugin-react": "^4.1.1",
     "axios": "^1.4.0",
     "babel-loader": "^8.3.0",
     "chalk": "^5.3.0",
@@ -96,6 +95,8 @@
     "eslint-plugin-vitest": "^0.3.9",
     "file-loader": "^6.2.0",
     "husky": "^8.0.3",
+    "jsdom": "^22.1.0",
+    "lodash": "^4.17.21",
     "plop": "^3.1.2",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
