feat: 스크립트 수정

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "parse": "ts-node src/script/parser/index.ts",
     "storybook": "storybook dev -p 6006",
     "build-rollup": "rollup -c",
-    "build": "rimraf lib && npm run parse && npm run build-rollup",
+    "build": "rimraf lib && npm run build-rollup",
     "release": "npm run build && changeset publish",
     "test": "vitest run"
   },
