feat: npm 을 pnpm 으로 마이그레이션

--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.21",
   "description": "tft team-builder",
   "scripts": {
-    "start": "npm run storybook",
+    "preinstall": "npx only-allow pnpm",
+    "start": "pnpm run storybook",
     "parse_augment": "ts-node -T src/script/parser/augmentParser.ts",
     "parse_champion": "ts-node -T src/script/parser/championParser.ts",
     "parse_item": "ts-node -T src/script/parser/itemParser.ts",
     "parse_trait": "ts-node -T src/script/parser/traitParser.ts",
     "storybook": "storybook dev -p 6006",
     "build-rollup": "rollup -c",
-    "build": "rimraf lib && npm run build-rollup",
-    "release": "npm run build && changeset publish",
+    "build": "rimraf lib && pnpm run build-rollup",
+    "release": "pnpm run build && changeset publish",
     "test": "vitest run",
-    "link": "npm run build && npm link",
+    "link": "pnpm run build && pnpm link --global",
     "api": "ts-node -T src/script/api/championDetail.ts"
   },
   "keywords": [
@@ -84,6 +85,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^16.18.40",
     "@types/react": "^18.2.19",
     "@types/react-dom": "^18.2.7",
